--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -3,15 +3,41 @@
 <html>
 
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.js"></script>
-  <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 
 <body ng-app="githubViewer">
-  <div ng-controller="MainController">
-    <h1>Hello {{message}}</h1>
-    <p>Start editing and see your changes reflected here!</p>
-  </div>
+<div ng-controller="MainController">
+
+    <h2>{{ message }}</h2>
+
+    <div>
+        {{ error }}
+    </div>
+
+    {{ username }}
+    <form name="searchUser" ng-submit="search(username)">
+        <input type="search" required placeholder="Username to find" ng-model="username">
+        <input type="submit" value="Search">
+    </form>
+
+    <div ng-show="user">
+        <h2>{{ user.name }}</h2>
+        <img ng-src="{{user.avatar_url}}" title="{{user.name}}" style="height: 60px; width: 60px">
+    </div>
+
+    Order:
+    <select ng-model="repoSortOrder">
+        <option value="+name">Name</option>
+        <option value="-stargazers_count">Stars</option>
+        <option value="+language">Language</option>
+    </select>
+
+    <div ng-include="'user-template.html'" ng-show="user">
+    </div>
+</div>
 </body>
 
 </html>
