--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -17,25 +17,13 @@
         {{ error }}
     </div>
 
-    {{ username }}
+    {{ countdown  }}
     <form name="searchUser" ng-submit="search(username)">
         <input type="search" required placeholder="Username to find" ng-model="username">
         <input type="submit" value="Search">
     </form>
 
-    <div ng-show="user">
-        <h2>{{ user.name }}</h2>
-        <img ng-src="{{user.avatar_url}}" title="{{user.name}}" style="height: 60px; width: 60px">
-    </div>
-
-    Order:
-    <select ng-model="repoSortOrder">
-        <option value="+name">Name</option>
-        <option value="-stargazers_count">Stars</option>
-        <option value="+language">Language</option>
-    </select>
-
-    <div ng-include="'user-template.html'" ng-show="user">
+    <div ng-include="'user-details.html'" ng-show="user">
     </div>
 </div>
 </body>
