--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="github.js"></script>
 </head>
 
 <body ng-app="githubViewer">
