--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
 
-<html>
+<html ng-app="githubViewer">
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular-route.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="app.js"></script>
+    <script src="MainController.js"></script>
+    <script src="UserController.js"></script>
     <script src="github.js"></script>
 </head>
 
-<body ng-app="githubViewer">
-<div ng-controller="MainController">
-
-    <h2>{{ message }}</h2>
-
-    <div>
-        {{ error }}
-    </div>
-
-    {{ countdown  }}
-    <form name="searchUser" ng-submit="search(username)">
-        <input type="search" required placeholder="Username to find" ng-model="username">
-        <input type="submit" value="Search">
-    </form>
-
-    <div ng-include="'user-details.html'" ng-show="user">
-    </div>
-</div>
+<body>
+<h1>Github Viewer</h1>
+<div ng-view></div>
 </body>
 
 </html>
