--- a/angularjs/user.html
+++ b/angularjs/user.html
@@ -1,4 +1,4 @@
-<div id="userDetails">
+<div>
     <h2>{{user.name}}</h2>
     <img ng-src="{{user.avatar_url}}" title="{{user.name}}" style="height: 60px; width: 60px">
     Order:
