fix: clean code

--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -5,12 +5,12 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular-route.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/views/style.css">
     <script src="app.js"></script>
-    <script src="MainController.js"></script>
-    <script src="UserController.js"></script>
-    <script src="RepoController.js"></script>
-    <script src="github.js"></script>
+    <script src="public/controllers/MainController.js"></script>
+    <script src="public/controllers/UserController.js"></script>
+    <script src="public/controllers/RepoController.js"></script>
+    <script src="public/directives/github.js"></script>
 </head>
 
 <body>
